Login page is in alpha right now. Working on layout issues and integrating with rest of site.
git-tfs-id: [https://maqbootcampjuly14.visualstudio.com/DefaultCollection]$/Test Project/WebSites/YouTubeAPISite;C79

--- a/Style/common.css
+++ b/Style/common.css
@@ -31,6 +31,17 @@ body {
   min-height:100%;
 }
 
+button:disabled {
+    color: gray;
+    border: none;
+}
+
+button:disabled:hover {
+    color: gray;
+    border: none;
+    pointer-events: none;
+}
+
 .good {
     background-color: #99FF66;
 }
@@ -146,14 +157,6 @@ h3 {
     font-weight: normal;
     border: none;
     clear: both;
-}
-
-/* body */
-#body {
-    width: 100%;
-    min-height: 500px;
-    height:100%;
-    padding-bottom:60px;   /* Height of the footer */
 }
 
 
